@@ -71,6 +71,9 @@ C-API
 Library
 -------
 
+- Issue #5610: feedparser no longer eats extra characters at the end of
+  a body part if the body part ends with a \r\n.
+
 - Issue #8924: logging: Improved error handling for Unicode in exception text.
 
 - Fix codecs.escape_encode to return the correct consumed size.
